--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rock Paper Scissors Game</title>
-  <style src="style.css"></style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
