--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
   <audio id="tieSound" src="https://www.soundjay.com/button/sounds/beep-10.mp3"></audio>
 
   <script src="game.js"></script>
+
+  <button id="playAgain" class="play-again">Play Again</button>
 </body>
 </html>
