Adding changes to the reset button feature

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
   <script src="game.js"></script>
 
-  <button id="playAgain" class="play-again">Play Again</button>
+<button id="playAgain" style="display:none; padding: 1rem 2rem; font-size: 1.2rem; margin-top: 1rem; background-color: #f39c12; border: none; border-radius: 10px; cursor: pointer;">
+  Play Again
+</button>
+
 </body>
 </html>
