--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
 
 </head>
 <body>
-  <h1>Rock Paper Scissors</h1>
-  <div class="choices">
-    <button class="choice" onclick="playRound('rock')">✊</button>
-    <button class="choice" onclick="playRound('paper')">🖐️</button>
-    <button class="choice" onclick="playRound('scissors')">✌️</button>
+  <div id="introScreen">
+    <div class="console-box">
+      <p>> Initializing Cyber Arena...</p>
+      <p>> Loading neural link...</p>
+      <p>> Syncing with Reality Matrix...</p>
+      <p>> Boot Complete. Welcome, Player.</p>
+    </div>
+    <button id="startGameBtn">[ ENTER ARENA ]</button>
   </div>
-  <div class="result" id="result">Choose to start!</div>
-  <div class="score" id="score">You: 0 | Computer: 0</div>
-  <div class="final" id="final"></div>
+
+  <div id="gameContainer" style="display: none;">
+    <h1>Cyberpunk RPS</h1>
+    <div class="choices">
+      <button class="choice">🪨</button>
+      <button class="choice">📄</button>
+      <button class="choice">✂️</button>
+    </div>
+    <div class="result"></div>
+    <div class="score"></div>
+    <div class="final"></div>
+    <button id="playAgain">Play Again</button>
+  </div>
 
   <audio id="winSound" src="https://www.soundjay.com/human/sounds/applause-8.mp3"></audio>
   <audio id="loseSound" src="https://www.soundjay.com/button/sounds/beep-07.mp3"></audio>
