Fixing the html bug on div console-box

--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 </head>
 <body>
   <div id="introScreen">
-    <div class="console-box">
-      <p>> Initializing Cyber Arena...</p>
-      <p>> Loading neural link...</p>
-      <p>> Syncing with Reality Matrix...</p>
-      <p>> Boot Complete. Welcome, Player.</p>
-    </div>
+    <div class="console-box" id="consoleBox"></div>
+
     <button id="startGameBtn">[ ENTER ARENA ]</button>
   </div>
 
